k8s/backend-deployment.yaml
# backend-deployment.yaml
# Backend API deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: pawan977/monitoring-backend:latest
          ports:
            - containerPort: 5000
